--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div class="footer">Atualizado automaticamente a partir da planilha do Google Sheets.</div>
 
   <script>
-    const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTt_qBJzPiSSlfU2KY-FszXMHkAm8-r6QAZXFiqKUBvYqgWaM9c1i8YGqkPi-yqv2lljYosXpWvn7z4/pub?output=csv';
+    const sheetURL = 'https://docs.google.com/spreadsheets/d/1maOPaJn9attovo_mr-enOguq5BF2aTZadroKZ9seb9U/gviz/tq?tqx=out:csv&sheet=Servi%C3%A7os%20em%20Atibaia';
 
     async function loadSheetData() {
       const res = await fetch(sheetURL);
