--- a/index.html
+++ b/index.html
@@ -7,51 +7,87 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fefefe;
       text-align: center;
-      padding: 20px;
+      background-color: #fdfdfd;
+      color: #333;
     }
-
     h1 {
-      color: #9933ff;
+      color: #8a2be2;
+      margin-top: 30px;
     }
-
-    input {
+    input[type="text"] {
+      margin: 20px auto;
       padding: 10px;
-      width: 300px;
-      margin-bottom: 20px;
+      width: 60%;
+      max-width: 400px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 6px;
     }
-
     table {
-      width: 100%;
+      margin: 20px auto;
       border-collapse: collapse;
-      margin-top: 10px;
+      width: 95%;
+      max-width: 1000px;
     }
-
     th, td {
       padding: 12px;
       border: 1px solid #ddd;
     }
-
     th {
-      background: #e6d9ff;
+      background-color: #e6ddff;
       font-weight: bold;
     }
-
-    td {
-      background: #f9f9ff;
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
     }
-
-    .footer {
-      margin-top: 30px;
+    footer {
+      margin: 30px auto;
+      font-size: 0.9em;
       color: #777;
-      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <h1>Serviços em Atibaia</h1>
+  <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
-  <input type="text" id="search" placeholder="Buscar por especialidade
+  <table id="dataTable">
+    <thead>
+      <tr>
+        <th>ESPECIALIDADE</th>
+        <th>NOME</th>
+        <th>CONTATO</th>
+        <th>QUEM INDICOU</th>
+        <th>OBSERVAÇÕES</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Dados da planilha serão inseridos aqui -->
+    </tbody>
+  </table>
+
+  <footer>Atualizado automaticamente a partir da planilha do Google Sheets.</footer>
+
+  <script>
+    const url = "https://docs.google.com/spreadsheets/d/1maOPaJn9attovo_mr-enOguq5BF2aTZadroKZ9seb9U/gviz/tq?tqx=out:csv&sheet=Servi%C3%A7os%20em%20Atibaia";
+
+    fetch(url)
+      .then(res => res.text())
+      .then(csvText => {
+        const rows = csvText.trim().split("\n").map(row => row.split(","));
+        const tbody = document.querySelector("#dataTable tbody");
+        
+        // Remove cabeçalho (primeira linha)
+        rows.slice(1).forEach(cols => {
+          const tr = document.createElement("tr");
+          cols.forEach(cell => {
+            const td = document.createElement("td");
+            td.textContent = cell;
+            tr.appendChild(td);
+          });
+          tbody.appendChild(tr);
+        });
+      });
+
+    // Filtro por especialidade
+    document.getElementBy
