--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <footer>Atualizado automaticamente a partir da planilha do Google Sheets.</footer>
 
   <script>
-    const url = "https://docs.google.com/spreadsheets/d/1maOPaJn9attovo_mr-enOguq5BF2aTZadroKZ9seb9U/gviz/tq?tqx=out:csv&sheet=Servi%C3%A7os%20em%20Atibaia";
+    const url = "https://docs.google.com/spreadsheets/d/1maOPaJn9attovo_mr-enOguq5BF2aTZadroKZ9seb9U/edit?usp=sharing/gviz/tq?tqx=out:csv&sheet=Servi%C3%A7os%20em%20Atibaia";
 
     fetch(url)
       .then(res => res.text())
