--- a/index.html
+++ b/index.html
@@ -4,54 +4,50 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Serviços em Atibaia</title>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #fdfdfd;
-      color: #333;
-    }
-    h1 {
-      color: #8a2be2;
-      margin-top: 30px;
-    }
-    input[type="text"] {
-      margin: 20px auto;
-      padding: 10px;
-      width: 60%;
-      max-width: 400px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    table {
-      margin: 20px auto;
-      border-collapse: collapse;
-      width: 95%;
-      max-width: 1000px;
-    }
-    th, td {
-      padding: 12px;
-      border: 1px solid #ddd;
-    }
-    th {
-      background-color: #e6ddff;
-      font-weight: bold;
-    }
-    tr:nth-child(even) {
+      padding: 20px;
       background-color: #f9f9f9;
     }
+    h1 {
+      color: #6610f2;
+    }
+    input[type="text"] {
+      padding: 10px;
+      font-size: 16px;
+      margin: 20px 0;
+      width: 100%;
+      max-width: 400px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th, td {
+      padding: 10px;
+      border: 1px solid #ccc;
+    }
+    th {
+      background-color: #eee;
+    }
     footer {
-      margin: 30px auto;
-      font-size: 0.9em;
-      color: #777;
+      margin-top: 20px;
+      font-size: 12px;
+      color: #666;
+      text-align: center;
     }
   </style>
 </head>
 <body>
+
   <h1>Serviços em Atibaia</h1>
+
   <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
-  <table id="dataTable">
+  <table id="resultTable">
     <thead>
       <tr>
         <th>ESPECIALIDADE</th>
@@ -61,33 +57,53 @@
         <th>OBSERVAÇÕES</th>
       </tr>
     </thead>
-    <tbody>
-      <!-- Dados da planilha serão inseridos aqui -->
-    </tbody>
+    <tbody></tbody>
   </table>
 
-  <footer>Atualizado automaticamente a partir da planilha do Google Sheets.</footer>
+  <footer>Dados carregados automaticamente da planilha do Google Sheets.</footer>
 
   <script>
-    const url = "https://docs.google.com/spreadsheets/d/1maOPaJn9attovo_mr-enOguq5BF2aTZadroKZ9seb9U/edit?usp=sharing/gviz/tq?tqx=out:csv&sheet=Servi%C3%A7os%20em%20Atibaia";
+    const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXqUSxh-ODHdT4X5tMKyZsgxVldGkyQVgR5zv9kq_hvY0HFSjz-KhvktaedM5SGxsoHYT2IdN2B1Bj/pub?gid=0&single=true&output=csv";
+    const tabela = document.querySelector("#resultTable tbody");
+    const searchInput = document.getElementById("searchInput");
+    let dadosOriginais = [];
 
-    fetch(url)
-      .then(res => res.text())
-      .then(csvText => {
-        const rows = csvText.trim().split("\n").map(row => row.split(","));
-        const tbody = document.querySelector("#dataTable tbody");
-        
-        // Remove cabeçalho (primeira linha)
-        rows.slice(1).forEach(cols => {
-          const tr = document.createElement("tr");
-          cols.forEach(cell => {
-            const td = document.createElement("td");
-            td.textContent = cell;
-            tr.appendChild(td);
-          });
-          tbody.appendChild(tr);
+    Papa.parse(csvUrl, {
+      download: true,
+      header: true,
+      skipEmptyLines: true,
+      complete: function (results) {
+        dadosOriginais = results.data;
+        renderTabela(dadosOriginais);
+      }
+    });
+
+    function renderTabela(dados) {
+      tabela.innerHTML = "";
+
+      dados.forEach(row => {
+        const tr = document.createElement("tr");
+        const colunas = ["ESPECIALIDADE", "NOME", "CONTATO", "QUEM INDICOU", "OBSERVAÇÕES"];
+
+        colunas.forEach(coluna => {
+          const chave = Object.keys(row).find(k => k.trim().toLowerCase() === coluna.toLowerCase());
+          const td = document.createElement("td");
+          td.textContent = row[chave]?.trim() || "";
+          tr.appendChild(td);
         });
-      });
 
-    // Filtro por especialidade
-    document.getElementBy
+        tabela.appendChild(tr);
+      });
+    }
+
+    searchInput.addEventListener("input", function () {
+      const termo = this.value.toLowerCase();
+      const filtrado = dadosOriginais.filter(row =>
+        row["ESPECIALIDADE"]?.toLowerCase().includes(termo)
+      );
+      renderTabela(filtrado);
+    });
+  </script>
+
+</body>
+</html>
