--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
       padding: 1rem;
       margin: 0;
       text-align: center;
-      background-color: #fefefe;
+      background-color: #ffffff;
+      color: #000;
     }
+
     h1 {
-      color: #9b2fff;
+      color: #7030a0; /* tom roxo mais próximo ao Excel */
       font-size: 2rem;
     }
+
     input {
       padding: 0.6rem;
       font-size: 1rem;
@@ -24,30 +27,41 @@
       max-width: 500px;
       margin: 1rem auto;
       display: block;
-      border-radius: 5px;
-      border: 1px solid #aaa;
+      border-radius: 4px;
+      border: 1px solid #999;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 1rem;
       overflow-x: auto;
       display: block;
+      font-size: 0.95rem;
     }
+
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       padding: 0.75rem;
       text-align: left;
       word-break: break-word;
     }
+
     th {
-      background-color: #e8d9ff;
+      background-color: #e4dfec; /* lilás claro */
+      color: #000;
     }
+
+    tr:nth-child(even) {
+      background-color: #f9f7fb;
+    }
+
     .footer {
       margin-top: 2rem;
       font-size: 0.9rem;
       color: #666;
     }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 1.5rem;
