--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
       padding: 1rem;
       margin: 0;
       text-align: center;
-      background-color: #ffffff;
-      color: #000;
+      background-color: #fefefe;
     }
-
     h1 {
-      color: #7030a0; /* tom roxo mais próximo ao Excel */
+      color: #9b2fff;
       font-size: 2rem;
     }
-
     input {
       padding: 0.6rem;
       font-size: 1rem;
@@ -27,41 +24,30 @@
       max-width: 500px;
       margin: 1rem auto;
       display: block;
-      border-radius: 4px;
-      border: 1px solid #999;
+      border-radius: 5px;
+      border: 1px solid #aaa;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 1rem;
       overflow-x: auto;
       display: block;
-      font-size: 0.95rem;
     }
-
     th, td {
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
       padding: 0.75rem;
       text-align: left;
       word-break: break-word;
     }
-
     th {
-      background-color: #e4dfec; /* lilás claro */
-      color: #000;
+      background-color: #e8d9ff;
     }
-
-    tr:nth-child(even) {
-      background-color: #f9f7fb;
-    }
-
     .footer {
       margin-top: 2rem;
       font-size: 0.9rem;
       color: #666;
     }
-
     @media (max-width: 600px) {
       h1 {
         font-size: 1.5rem;
@@ -100,15 +86,29 @@
     const searchInput = document.getElementById("searchInput");
     const tableBody = document.getElementById("tableBody");
 
+    function makeLinkIfURL(text) {
+      const urlPattern = /(https?:\/\/[^\s]+)/g;
+      if (urlPattern.test(text)) {
+        return `<a href="${text}" target="_blank" rel="noopener noreferrer">${text}</a>`;
+      }
+      return text;
+    }
+
+    function cleanText(text) {
+      return (text || "").replace(/\n/g, " ").trim(); // remove quebras de linha e espaços extras
+    }
+
     function renderTable(data, filter = "") {
       tableBody.innerHTML = "";
-      data.forEach(row => {
-        const especialidade = row[0] || "";
+      data.forEach((row, index) => {
+        if (index === 0) return; // pula a linha de cabeçalho
+        const especialidade = cleanText(row[0]);
         if (filter && !especialidade.toLowerCase().includes(filter.toLowerCase())) return;
+
         const tr = document.createElement("tr");
         for (let i = 0; i < 5; i++) {
           const td = document.createElement("td");
-          td.textContent = row[i] || "";
+          td.innerHTML = makeLinkIfURL(cleanText(row[i]));
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
@@ -119,7 +119,7 @@
       download: true,
       header: false,
       complete: function(results) {
-        const allData = results.data.slice(1); // remove cabeçalho
+        const allData = results.data;
         renderTable(allData);
         searchInput.addEventListener("input", () => {
           const filter = searchInput.value.trim();
