--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Serviços em Atibaia</title>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <style>
@@ -10,57 +10,65 @@
       font-family: Arial, sans-serif;
       padding: 1rem;
       margin: 0;
-      text-align: center;
-      background-color: #ffffff;
+      background-color: #fefefe;
     }
+
     h1 {
-      color: #2e7d32;
-      font-size: 2rem;
+      color: #800080;
+      text-align: center;
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
     }
+
     input {
-      padding: 0.6rem;
-      font-size: 1rem;
       width: 100%;
       max-width: 500px;
-      margin: 1rem auto;
+      padding: 0.5rem;
+      margin: 0 auto 1rem;
       display: block;
-      border-radius: 5px;
-      border: 1px solid #aaa;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 1rem;
-      overflow-x: auto;
-      display: block;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 0.75rem;
-      text-align: left;
-      word-break: break-word;
-    }
-    th {
-      background-color: #a5d6a7; /* verde claro para o cabeçalho */
-    }
-    tbody tr:nth-child(even) {
-      background-color: #e8f5e9; /* verde bem claro */
-    }
-    tbody tr:nth-child(odd) {
-      background-color: #ffffff;
-    }
-    .footer {
-      margin-top: 2rem;
+      table-layout: fixed;
+      background-color: #d0f0d0;
       font-size: 0.9rem;
+    }
+
+    th, td {
+      border: 1px solid #333;
+      padding: 0.7rem;
+      word-wrap: break-word;
+      vertical-align: top;
+    }
+
+    th {
+      background-color: #b0e0b0;
+      font-weight: bold;
+    }
+
+    tr:nth-child(even) {
+      background-color: #e6ffe6;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.85rem;
       color: #666;
     }
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5rem;
+
+    @media (max-width: 768px) {
+      table, thead, tbody, th, td, tr {
+        font-size: 0.8rem;
       }
-      th, td {
-        font-size: 0.85rem;
-        padding: 6px;
+
+      input {
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -100,7 +108,7 @@
         const tr = document.createElement("tr");
         for (let i = 0; i < 5; i++) {
           const td = document.createElement("td");
-          td.textContent = row[i] || "";
+          td.innerHTML = row[i] || "";
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
