--- a/index.html
+++ b/index.html
@@ -8,67 +8,70 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 1rem;
       margin: 0;
+      padding: 1rem;
       background-color: #fefefe;
+      text-align: center;
     }
 
     h1 {
-      color: #800080;
-      text-align: center;
-      margin-bottom: 1rem;
+      color: #6a00cc;
       font-size: 1.8rem;
+      margin-bottom: 1rem;
     }
 
     input {
-      width: 100%;
-      max-width: 500px;
       padding: 0.5rem;
-      margin: 0 auto 1rem;
-      display: block;
       font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 4px;
+      width: 100%;
+      max-width: 600px;
+      margin-bottom: 1rem;
+      border-radius: 5px;
+      border: 1px solid #aaa;
+    }
+
+    .table-wrapper {
+      overflow-x: auto;
     }
 
     table {
       width: 100%;
+      min-width: 900px;
       border-collapse: collapse;
-      table-layout: fixed;
-      background-color: #d0f0d0;
-      font-size: 0.9rem;
+      background-color: #eaffea;
     }
 
     th, td {
-      border: 1px solid #333;
-      padding: 0.7rem;
-      word-wrap: break-word;
+      border: 1px solid #888;
+      padding: 12px 10px;
+      text-align: left;
+      white-space: nowrap; /* impede quebra */
       vertical-align: top;
     }
 
     th {
-      background-color: #b0e0b0;
-      font-weight: bold;
-    }
-
-    tr:nth-child(even) {
-      background-color: #e6ffe6;
+      background-color: #ccf2ff;
+      color: #000;
     }
 
     .footer {
-      text-align: center;
       margin-top: 2rem;
       font-size: 0.85rem;
-      color: #666;
+      color: #555;
     }
 
-    @media (max-width: 768px) {
-      table, thead, tbody, th, td, tr {
-        font-size: 0.8rem;
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
       }
 
       input {
-        font-size: 0.9rem;
+        font-size: 0.95rem;
+      }
+
+      th, td {
+        font-size: 0.85rem;
+        padding: 8px;
       }
     }
   </style>
@@ -77,18 +80,20 @@
   <h1>Serviços em Atibaia</h1>
   <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
-  <table id="dataTable">
-    <thead>
-      <tr>
-        <th>ESPECIALIDADE</th>
-        <th>NOME</th>
-        <th>CONTATO</th>
-        <th>QUEM INDICOU</th>
-        <th>OBSERVAÇÕES</th>
-      </tr>
-    </thead>
-    <tbody id="tableBody"></tbody>
-  </table>
+  <div class="table-wrapper">
+    <table id="dataTable">
+      <thead>
+        <tr>
+          <th>ESPECIALIDADE</th>
+          <th>NOME</th>
+          <th>CONTATO</th>
+          <th>QUEM INDICOU</th>
+          <th>OBSERVAÇÕES</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
+  </div>
 
   <div class="footer">
     Atualizado automaticamente a partir da planilha do Google Sheets.
@@ -108,7 +113,7 @@
         const tr = document.createElement("tr");
         for (let i = 0; i < 5; i++) {
           const td = document.createElement("td");
-          td.innerHTML = row[i] || "";
+          td.textContent = row[i] || "";
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
