--- a/index.html
+++ b/index.html
@@ -8,69 +8,52 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
       padding: 1rem;
-      background-color: #fefefe;
+      margin: 0;
       text-align: center;
+      background-color: #fefefe;
     }
-
     h1 {
-      color: #6a00cc;
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
+      color: #9b2fff;
+      font-size: 2rem;
     }
-
     input {
-      padding: 0.5rem;
+      padding: 0.6rem;
       font-size: 1rem;
       width: 100%;
-      max-width: 600px;
-      margin-bottom: 1rem;
+      max-width: 500px;
+      margin: 1rem auto;
+      display: block;
       border-radius: 5px;
       border: 1px solid #aaa;
     }
-
-    .table-wrapper {
-      overflow-x: auto;
-    }
-
     table {
       width: 100%;
-      min-width: 900px;
       border-collapse: collapse;
-      background-color: #eaffea;
+      margin-top: 1rem;
+      overflow-x: auto;
+      display: block;
     }
-
     th, td {
-      border: 1px solid #888;
-      padding: 12px 10px;
+      border: 1px solid #ddd;
+      padding: 0.75rem;
       text-align: left;
-      white-space: nowrap; /* impede quebra */
-      vertical-align: top;
+      word-break: break-word;
     }
-
     th {
-      background-color: #ccf2ff;
-      color: #000;
+      background-color: #e8d9ff;
     }
-
     .footer {
       margin-top: 2rem;
-      font-size: 0.85rem;
-      color: #555;
+      font-size: 0.9rem;
+      color: #666;
     }
-
     @media (max-width: 600px) {
       h1 {
         font-size: 1.5rem;
       }
-
-      input {
-        font-size: 0.95rem;
-      }
-
       th, td {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
         padding: 8px;
       }
     }
@@ -80,20 +63,18 @@
   <h1>Serviços em Atibaia</h1>
   <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
-  <div class="table-wrapper">
-    <table id="dataTable">
-      <thead>
-        <tr>
-          <th>ESPECIALIDADE</th>
-          <th>NOME</th>
-          <th>CONTATO</th>
-          <th>QUEM INDICOU</th>
-          <th>OBSERVAÇÕES</th>
-        </tr>
-      </thead>
-      <tbody id="tableBody"></tbody>
-    </table>
-  </div>
+  <table id="dataTable">
+    <thead>
+      <tr>
+        <th>ESPECIALIDADE</th>
+        <th>NOME</th>
+        <th>CONTATO</th>
+        <th>QUEM INDICOU</th>
+        <th>OBSERVAÇÕES</th>
+      </tr>
+    </thead>
+    <tbody id="tableBody"></tbody>
+  </table>
 
   <div class="footer">
     Atualizado automaticamente a partir da planilha do Google Sheets.
