--- a/index.html
+++ b/index.html
@@ -34,17 +34,20 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      table-layout: auto;
+      table-layout: fixed;
       background-color: #d0f0d0;
       font-size: 0.9rem;
-      word-wrap: break-word;
     }
 
     th, td {
       border: 1px solid #333;
       padding: 0.7rem;
       vertical-align: top;
-      white-space: normal;
+      white-space: nowrap; /* Impede quebra de linha */
+    }
+
+    td a, td {
+      word-break: break-word;
     }
 
     th {
@@ -54,11 +57,6 @@
 
     tr:nth-child(even) {
       background-color: #e6ffe6;
-    }
-
-    td a {
-      color: #006600;
-      word-break: break-all;
     }
 
     .footer {
@@ -76,6 +74,11 @@
       input {
         font-size: 0.9rem;
       }
+
+      /* Se quiser permitir quebra de linha em telas pequenas, ative abaixo */
+      /* td {
+        white-space: normal;
+      } */
     }
   </style>
 </head>
@@ -114,13 +117,7 @@
         const tr = document.createElement("tr");
         for (let i = 0; i < 5; i++) {
           const td = document.createElement("td");
-          // transforma links em <a>
-          const cell = (row[i] || "").toString();
-          if (cell.startsWith("http")) {
-            td.innerHTML = `<a href="${cell}" target="_blank">${cell}</a>`;
-          } else {
-            td.innerHTML = cell;
-          }
+          td.innerHTML = row[i] || "";
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
