--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      padding: 1rem;
       margin: 0;
       background-color: #fefefe;
     }
@@ -15,24 +16,15 @@
     h1 {
       color: #800080;
       text-align: center;
-      margin: 1rem 0 0.5rem;
+      margin-bottom: 1rem;
       font-size: 1.8rem;
-    }
-
-    .search-container {
-      position: sticky;
-      top: 0;
-      background: #fefefe;
-      z-index: 100;
-      padding: 0.5rem 1rem 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     input {
       width: 100%;
       max-width: 500px;
       padding: 0.5rem;
-      margin: 0 auto;
+      margin: 0 auto 1rem;
       display: block;
       font-size: 1rem;
       border: 1px solid #ccc;
@@ -42,7 +34,7 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      table-layout: auto;
+      table-layout: auto; /* atualizado */
       background-color: #d0f0d0;
       font-size: 0.9rem;
     }
@@ -65,7 +57,7 @@
 
     .footer {
       text-align: center;
-      margin: 2rem 1rem 1rem;
+      margin-top: 2rem;
       font-size: 0.85rem;
       color: #666;
     }
@@ -83,10 +75,7 @@
 </head>
 <body>
   <h1>Serviços em Atibaia</h1>
-
-  <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
-  </div>
+  <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
   <table id="dataTable">
     <thead>
