--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      table-layout: auto; /* atualizado */
+      table-layout: fixed;
       background-color: #d0f0d0;
       font-size: 0.9rem;
     }
@@ -42,8 +42,12 @@
     th, td {
       border: 1px solid #333;
       padding: 0.7rem;
-      word-break: break-word;
       vertical-align: top;
+      white-space: nowrap; /* Impede quebra de linha */
+    }
+
+    td a, td {
+      word-break: break-word;
     }
 
     th {
@@ -70,6 +74,11 @@
       input {
         font-size: 0.9rem;
       }
+
+      /* Se quiser permitir quebra de linha em telas pequenas, ative abaixo */
+      /* td {
+        white-space: normal;
+      } */
     }
   </style>
 </head>
