--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      padding: 1rem;
       margin: 0;
       background-color: #fefefe;
     }
@@ -15,31 +16,31 @@
     h1 {
       color: #800080;
       text-align: center;
-      margin: 1rem 0 0.5rem;
+      margin-bottom: 1rem;
       font-size: 1.8rem;
-    }
-
-    .search-container {
-      position: sticky;
-      top: 0;
-      background: #fefefe;
-      padding: 0.5rem 1rem 1rem;
-      z-index: 100;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     input {
       width: 100%;
       max-width: 500px;
       padding: 0.5rem;
-      margin: 0 auto;
+      margin: 0 auto 1rem;
       display: block;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 4px;
+      position: sticky;
+      top: 0;
+      background-color: white;
+      z-index: 2;
+    }
+
+    .table-container {
+      overflow-x: auto;
     }
 
     table {
+      min-width: 800px;
       width: 100%;
       border-collapse: collapse;
       table-layout: auto;
@@ -50,18 +51,8 @@
     th, td {
       border: 1px solid #333;
       padding: 0.7rem;
+      white-space: nowrap;
       vertical-align: top;
-    }
-
-    td {
-      max-width: 1px;
-      white-space: nowrap;
-      overflow-wrap: anywhere;
-    }
-
-    td a {
-      white-space: nowrap;
-      overflow-wrap: anywhere;
     }
 
     th {
@@ -75,7 +66,7 @@
 
     .footer {
       text-align: center;
-      margin: 2rem 1rem 1rem;
+      margin-top: 2rem;
       font-size: 0.85rem;
       color: #666;
     }
@@ -93,23 +84,22 @@
 </head>
 <body>
   <h1>Serviços em Atibaia</h1>
+  <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
 
-  <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Buscar por especialidade..." />
+  <div class="table-container">
+    <table id="dataTable">
+      <thead>
+        <tr>
+          <th>ESPECIALIDADE</th>
+          <th>NOME</th>
+          <th>CONTATO</th>
+          <th>QUEM INDICOU</th>
+          <th>OBSERVAÇÕES</th>
+        </tr>
+      </thead>
+      <tbody id="tableBody"></tbody>
+    </table>
   </div>
-
-  <table id="dataTable">
-    <thead>
-      <tr>
-        <th>ESPECIALIDADE</th>
-        <th>NOME</th>
-        <th>CONTATO</th>
-        <th>QUEM INDICOU</th>
-        <th>OBSERVAÇÕES</th>
-      </tr>
-    </thead>
-    <tbody id="tableBody"></tbody>
-  </table>
 
   <div class="footer">
     Atualizado automaticamente a partir da planilha do Google Sheets.
@@ -129,7 +119,7 @@
         const tr = document.createElement("tr");
         for (let i = 0; i < 5; i++) {
           const td = document.createElement("td");
-          td.innerHTML = row[i] || "";
+          td.textContent = row[i] || "";
           tr.appendChild(td);
         }
         tableBody.appendChild(tr);
