--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="keywords" content="serviços, Atibaia, prestadores" />
   <title>Serviços em Atibaia</title>
   
+  <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#800080">
+  <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
+  
   <link rel="preconnect" href="https://docs.google.com" />
   <link rel="preconnect" href="https://cdn.jsdelivr.net" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -110,6 +114,14 @@
       color: #666;
     }
 
+    .offline-message {
+      background-color: #ff9800;
+      color: white;
+      text-align: center;
+      padding: 0.5rem;
+      display: none;
+    }
+
     @media (max-width: 768px) {
       table, thead, tbody, th, td, tr {
         font-size: 0.8rem;
@@ -129,6 +141,10 @@
   </style>
 </head>
 <body>
+  <div id="offlineMessage" class="offline-message">
+    Você está offline. Usando dados em cache.
+  </div>
+
   <h1>Serviços em Atibaia</h1>
   
   <div class="search-container">
@@ -163,7 +179,16 @@
     const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQXqUSxh-ODHdT4X5tMKyZsgxVldGkyQVgR5zv9kq_hvY0HFSjz-KhvktaedM5SGxsoHYT2IdN2B1Bj/pub?gid=0&single=true&output=csv";
     const searchInput = document.getElementById("searchInput");
     const tableBody = document.getElementById("tableBody");
+    const offlineMessage = document.getElementById("offlineMessage");
     let allData = [];
+
+    window.addEventListener('online', () => {
+      offlineMessage.style.display = 'none';
+    });
+    
+    window.addEventListener('offline', () => {
+      offlineMessage.style.display = 'block';
+    });
 
     function showLoading() {
       tableBody.innerHTML = '<tr class="loading"><td colspan="5">Carregando dados...</td></tr>';
@@ -175,6 +200,13 @@
 
     function showNoResults() {
       tableBody.innerHTML = '<tr class="no-results"><td colspan="5">Nenhum resultado encontrado</td></tr>';
+    }
+
+    function formatPhoneNumber(text) {
+      return text.replace(
+        /(\(?[0-9]{2}\)?\s?[0-9]{4,5}-?[0-9]{4})/g,
+        '<strong>$1</strong>'
+      );
     }
 
     function sortTable(column) {
@@ -202,7 +234,11 @@
           const tr = document.createElement("tr");
           for (let i = 0; i < 5; i++) {
             const td = document.createElement("td");
-            td.textContent = row[i] || "";
+            if (i === 2) { // Coluna de contato
+              td.innerHTML = formatPhoneNumber(row[i] || "");
+            } else {
+              td.textContent = row[i] || "";
+            }
             tr.appendChild(td);
           }
           tableBody.appendChild(tr);
@@ -213,12 +249,10 @@
       }
     }
 
-    // Adicionar ordenação nas colunas
     document.querySelectorAll('th').forEach((th, index) => {
       th.addEventListener('click', () => sortTable(index));
     });
 
-    // Implementar cache local
     const cachedData = localStorage.getItem('tableData');
     if (cachedData) {
       allData = JSON.parse(cachedData);
@@ -249,6 +283,18 @@
         showError();
       }
     });
+
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./service-worker.js')
+          .then(registration => {
+            console.log('ServiceWorker registrado com sucesso:', registration.scope);
+          })
+          .catch(error => {
+            console.log('Falha ao registrar ServiceWorker:', error);
+          });
+      });
+    }
   </script>
 </body>
 </html>
