--- a/index.html
+++ b/index.html
@@ -29,6 +29,52 @@
       font-size: 1.8rem;
     }
 
+    /* Modal Styles */
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal {
+      background-color: white;
+      padding: 2rem;
+      border-radius: 8px;
+      max-width: 90%;
+      width: 500px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .modal-content {
+      margin-bottom: 1.5rem;
+      white-space: pre-line;
+      line-height: 1.5;
+    }
+
+    .modal button {
+      background-color: #800080;
+      color: white;
+      border: none;
+      padding: 0.8rem 2rem;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+      width: 100%;
+      transition: background-color 0.3s;
+    }
+
+    .modal button:hover {
+      background-color: #660066;
+    }
+
+    /* Search Styles */
     .search-container {
       position: sticky;
       top: 0;
@@ -56,6 +102,7 @@
       box-shadow: 0 2px 8px rgba(128,0,128,0.2);
     }
 
+    /* Table Styles */
     .table-container {
       overflow-x: auto;
       padding: 0 1rem;
@@ -149,10 +196,28 @@
         font-size: 0.9rem;
         padding: 0.6rem;
       }
+
+      .modal {
+        padding: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- Modal de Aviso -->
+  <div id="disclaimerModal" class="modal-overlay">
+    <div class="modal">
+      <div class="modal-content">
+        ATENÇÃO!!!
+
+        Os administradores dos grupos Amigos do Bairro e Negócios do Bairro não tem nada a ver com as escolhas pessoais dos profissionais listados, que são gentilmente indicados pelos vizinhos. 
+
+        Porém, se houver algum problema com um profissional, podem entrar em contato comigo, para que eu tire do banco de dados. E, se o profissional não atende mais, por favor, avisem também. @Janete
+      </div>
+      <button onclick="acceptDisclaimer()">Entendi e Aceito</button>
+    </div>
+  </div>
+
   <div id="offlineMessage" class="offline-message">
     Você está offline. Usando dados em cache.
   </div>
@@ -193,6 +258,17 @@
     const tableBody = document.getElementById("tableBody");
     const offlineMessage = document.getElementById("offlineMessage");
     let allData = [];
+
+    // Gerenciamento do Modal
+    function acceptDisclaimer() {
+      document.getElementById('disclaimerModal').style.display = 'none';
+      localStorage.setItem('disclaimerAccepted', 'true');
+    }
+
+    // Verifica se já aceitou o aviso
+    if (localStorage.getItem('disclaimerAccepted')) {
+      document.getElementById('disclaimerModal').style.display = 'none';
+    }
 
     window.addEventListener('online', () => {
       offlineMessage.style.display = 'none';
