--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     th:nth-child(2), td:nth-child(2) { width: 20%; }
     th:nth-child(3), td:nth-child(3) { 
       width: 15%; 
-      white-space: nowrap;
+      white-space: normal;
+      line-height: 1.4;
     }
     th:nth-child(4), td:nth-child(4) { width: 20%; }
     th:nth-child(5), td:nth-child(5) { width: 25%; }
@@ -292,10 +293,13 @@
 
     function formatPhoneNumber(text) {
       if (!text) return '';
-      return text.replace(
-        /(\(?[0-9]{2}\)?\s?[0-9]{4,5}-?[0-9]{4})/g,
-        '<strong>$1</strong>'
-      );
+      const numbers = text.split(';');
+      return numbers.map(number => 
+        number.trim().replace(
+          /(\(?[0-9]{2}\)?\s?[0-9]{4,5}-?[0-9]{4})/g,
+          '<strong>$1</strong>'
+        )
+      ).join('<br>');
     }
 
     function sortTable(column) {
